# CosmoResearch

./: .gitignore  CosmoResearch.csproj  Program.cs  README.md  Startup.cs  appsettings.json  pyproject.toml
GraphQL/Common/: InheritanceAwareTypeInspector.cs
GraphQL/Data/: DataByKeyDataLoader.cs  DataQuery.cs  DataType.cs
GraphQL/Node/: NodeByKeyDataLoader.cs  NodeQuery.cs
GraphQL/Partition/: PartitionByKeyDataLoader.cs  PartitionQuery.cs  PartitionType.cs
Models/: DataEntity.cs  NodeEntity.cs  PartitionEntity.cs
Properties/: launchSettings.json
Protos/: dataUpload.proto  greet.proto
Services/: DataService.cs  DataUploadService.cs  DatabaseUtils.cs  GreeterService.cs  PartitionService.cs  TableService.cs
Settings/: DatabaseSettings.cs
client/: __main__.py  greet_pb2.py  greet_pb2_grpc.py
client/cli/: commands.py
client/grpc_types/: dataUpload_pb2.py  dataUpload_pb2_grpc.py
client/upload/: client.py  utils.py
